test/data/codegen/valid/nullable_columns/queries.cypher
// name: PersonProfile :one
MATCH (p:Person) WHERE p.id = $id RETURN p.name, p.nickname, p.age
