test/data/codegen/invalid/duplicate_source_file/a/queries.cypher
// name: OneQuery :one
MATCH (p:Person) WHERE p.id = $id RETURN p
